--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <title>DentalCare</title>
     <link rel="icon" href="../assets/img/teeth.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .hero {
-            background-image: url('assets/img/home.png');
-        }
-    </style>
 
 </head>
 <body>
@@ -19,17 +14,17 @@
     <!-- NAVBAR -->
     <nav class="navbar" id="navbar">
         <div class="navbar-logo">
-            <H4>Dental Care</H4>
+            <H4>Ventinove</H4>
         </div>
 
         <div class="nav-list">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="about-us.html">About Us</a></li>
                 <li><a href="dentist.html">Dentist</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><button onclick="window.location.href = '../book.html'">Booking</button></li>
+                <li><button id="openPopup">Booking</button></li>
             </ul>
         </div>
 
@@ -41,13 +36,61 @@
     </nav>
     <!-- END NAVBAR -->
 
+    <!-- START POP UP BOOKING -->
+    <div class="popup-form" id="popupForm">
+        <div class="popup-content">
+            <span class="close" id="closePopup">&times;</span>
+            <h2>MAKE AN APPOINTMENT</h2>
+            <!-- elemen-elemen form reservasi di sini -->
+            <form id="reservation-form" action="/submit" method="post">
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
+                <input type="tel" id="phone" name="phone" placeholder="Your Number" required>
+                <select id="service" name="service" required>
+                    <option value="" disabled selected>Select Your Service</option>
+                    <option value="Tooth Filling">Tooth Filling</option>
+                    <option value="Tooth Whitening">Tooth Whitening</option>
+                    <option value="Denture Fitting">Denture Fitting</option>
+                    <option value="Dental Health Consultation">Dental Health Consultation</option>
+                    <option value="Tooth Extraction">Tooth Extraction</option>
+                    <option value="Professional Scalling">Professional Scalling</option>
+                    <option value="Dental Check Up">Dental Check Up</option>
+                    <option value="Braces Installation">Braces Installation</option>
+                </select>
+                <select id="doctor" name="doctor" required>
+                    <option value="" disabled selected>Select Your Dentist</option>
+                    <!-- Pilihan dokter akan diperbarui berdasarkan layanan yang dipilih -->
+                </select>
+                <div class="time-group">
+                    <input type="date" id="date" name="date" min="2023-09-29">
+
+                    <select id="time" name="time" required>
+                        <option value="" disabled selected>Select Time</option>
+                        <option value="08:00">08:00 AM</option>
+                        <option value="09:00">09:00 AM</option>
+                        <option value="10:00">10:00 AM</option>
+                        <option value="11:00">11:00 AM</option>
+                        <option value="12:00">12:00 PM</option>
+                        <option value="13:00">01:00 PM</option>
+                        <option value="14:00">02:00 PM</option>
+                        <option value="15:00">03:00 PM</option>
+                        <option value="16:00">04:00 PM</option>
+                        <option value="17:00">05:00 PM</option>
+                    </select> 
+                </div>     
+                <input class="btn-sbmtAppoinment" type="submit" value="Book an Appoinment">
+            </form>
+        </div>
+    </div>
+    <!-- END POP UP BOOKING -->
+
     <!-- HERO SECTION -->
     <section class="hero">
         <h1>Welcome to</h1>
         <h2>Ventinove Dental Center</h2>
         <p>Perfect places to protect your smile and keep it healthy, with the largest network of dentist nationwide, quick answers 
         and personalized services</p>
-        <a href="#" class="btn-appointment">Make an Appointment</a> 
+        <button id="openPopup" class="btn-appointment">Make an Appoinment</button>
     </section>
     <!-- END HERO SECTION -->
 
@@ -66,7 +109,7 @@
             </p>
 
             <!-- Tombol "See More" -->
-            <a href="#" class="btn-see-more">See More</a>
+            <a href="about-us.html" class="btn-see-more">See More</a>
         </div>
     </section>
     <!-- END SECTION 1 ABOUT US -->
@@ -82,7 +125,7 @@
         <div class="section2-container">
             <!-- Service Card 1 -->
             <div class="section2-card">
-                <img src="assets/img/service1.png" alt="Service 1">
+                <img src="assets/img/service-1.png" alt="Service 1">
                 <h3>Tooth Filling</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -91,7 +134,7 @@
             </div>
             <!-- Service Card 2 -->
             <div class="section2-card">
-                <img src="assets/img/service8.png" alt="Service 8">
+                <img src="assets/img/service-8.png" alt="Service 8">
                 <h3>Braces Installation</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -100,7 +143,7 @@
             </div>
             <!-- Service Card 3 -->
             <div class="section2-card">
-                <img src="assets/img/service4.png" alt="Service 4">
+                <img src="assets/img/service-4.png" alt="Service 4">
                 <h3>Dental Health Consultation</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -122,7 +165,7 @@
         <div class="section3-container">
             <!-- Dentist Card 1 -->
             <div class="section3-card">
-                <img src="assets/img/dentist1.png" alt="Dentist 1">
+                <img src="assets/img/dentist-1.png" alt="Dentist 1">
                 <h3>Jocelyn Dokidis D.D.S.</h3>
                 <p>
                     Orthodontist
@@ -130,7 +173,7 @@
             </div>
             <!-- Dentist Card 2 -->
             <div class="section3-card">
-                <img src="assets/img/dentist5.png" alt="Dentist 2">
+                <img src="assets/img/dentist-5.png" alt="Dentist 2">
                 <h3>Phillip Aminoff D.D.S.</h3>
                 <p>
                     Periodontist
@@ -138,7 +181,7 @@
             </div>
             <!-- Dentist Card 3 -->
             <div class="section3-card">
-                <img src="assets/img/dentist2.png" alt="Dentist 3">
+                <img src="assets/img/dentist-2.png" alt="Dentist 3">
                 <h3>Tatiana Dias D.D.S.</h3>
                 <p>
                     General Dentist
@@ -149,11 +192,7 @@
     <!-- END SECTION 3 DENTIST -->
 
     <!-- JAVASCRIPT -->
-    <script src="js/index.js">
-        document.querySelector("button").addEventListener("click", function() {
-            window.location.href = '../login.html';
-        });
-    </script>
+    <script src="js/index.js"></script>
     <!-- END JAVASCRIPT -->
 
 </body>
