--- a/contact.html
+++ b/contact.html
@@ -94,13 +94,29 @@
     <!-- Content Section -->
     <section class="contact">
         <div class="contact-left">
-            <div class="openingHours-container">
-                <div class="openingHours-tittle">
+            <div class="opening-container">
+                <div class="opening-tittle">
                     <p>OPENING HOURS</p>
                 </div>
-                <div class="openingHours-list">
-
-                </div>
+                <table class="opening-list">
+                    <tr>
+                        <td>Monday-Thursday</td>
+                        <td>08.00-19.00 WIB</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>08.00-18.30 WIB</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>09.30-17.00 WIB</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>09.30-15.00 WIB</td>
+                    </tr>
+                    </tr>
+                </table>
             </div>
         </div>
         <div class="contact-right">
