--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <h1>Welcome to</h1>
-        <h2>Ventinove Dental Center</h2>
+        <h2>Ventinove Dental Care</h2>
         <p>Perfect places to protect your smile and keep it healthy, with the largest network of dentist nationwide, quick answers 
         and personalized services</p>
         <button id="openPopup" class="btn-appointment">Make an Appoinment</button>
@@ -190,6 +190,48 @@
         </div>
     </section>
     <!-- END SECTION 3 DENTIST -->
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer_content">
+            <div class="footer__addr">
+                <h1 class="footer__logo">Ventinove Dental Care</h1>
+                <ul>
+                    <li>Address : Mitlton Str. 26-27 London UK</li>
+                    <li>Phone : +62 812345678999</li>
+                    <li>Email : exampleemail@gmail.com</li>
+                </ul>
+            </div>
+            
+            <div class="footer__nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Dentist</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="nav__services">
+                <p class="srvc__title">Services</p>
+                <ul>
+                    <li>Tooth Filling</li>
+                    <li>Tooth Whitening</li>
+                    <li>Denture Fitting</li>
+                    <li>Dental Health Consultation</li>
+                    <li>Tooth Extraction</li>
+                    <li>Professional Scaling</li>
+                    <li>Dental Checkup</li>
+                    <li>Braces Installation</li>
+                </ul>
+            </div>
+        </div> 
+ 
+        <div class="copyright">
+            <p>Copyright &copy; 2023 All rights reserved | This template was made by GRUP 29</p>
+        </div>
+    </footer>
+    <!-- END FOOTER -->
 
     <!-- JAVASCRIPT -->
     <script src="js/index.js"></script>
