add booking page and contact

--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,7 @@
                 <li><a href="dentist.html">Dentist</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><button onclick="window.location.href = '../html/book.html'">Booking</button></li>
-                <!-- <li><a href="../html/booking.html">Booking</a></li> -->
+                <li><button><a href="booking.html">Booking</a></button></li>
             </ul>
         </div>
 
@@ -88,5 +87,6 @@
     <!-- End Content Section -->
 
     <script src="js/index.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
