--- a/services.html
+++ b/services.html
@@ -28,8 +28,7 @@
                 <li><a href="dentist.html">Dentist</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><button onclick="window.location.href = '../html/book.html'">Booking</button></li>
-                <!-- <li><a href="../html/booking.html">Booking</a></li> -->
+                <li><button><a href="booking.html">Booking</a></button></li>
             </ul>
         </div>
 
