--- a/contact.html
+++ b/contact.html
@@ -57,19 +57,19 @@
                 <table class="opening-list">
                     <tr>
                         <td>Monday-Thursday</td>
-                        <td>08.00-19.00 WIB</td>
+                        <td>08.00-17.00 WIB</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
-                        <td>08.00-18.30 WIB</td>
+                        <td>08.00-17.00 WIB</td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
-                        <td>09.30-17.00 WIB</td>
+                        <td>08.00-17.00 WIB</td>
                     </tr>
                     <tr>
                         <td>Sunday</td>
-                        <td>09.30-15.00 WIB</td>
+                        <td>Close</td>
                     </tr>
                     </tr>
                 </table>
@@ -98,6 +98,14 @@
             </form>
         </div>
     </section>
+
+
+    <!-- MAP SECTION -->
+    <section class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2770232876383!2d106.82385307424974!3d-6.227160160984252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e4734a8de3%3A0xb2ad7eacc88d7f3e!2sRevoU!5e0!3m2!1sid!2sid!4v1696592793229!5m2!1sid!2sid" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <!-- END MAP SECTION -->
+
     <!-- END CONTENT SECTION -->
     
     <!-- FOOTER -->
