organize all code

--- a/booking.html
+++ b/booking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
     <!-- Icon -->
-    <link rel="icon" href="../assets/img/teeth.png" type="image/png">
+    <link rel="icon" href="../assets/icon/teeth.ico" type="image/x-icon">
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
