--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DentalCare</title>
+    <title>Booking</title>
     <!-- Icon -->
-    <link rel="icon" href="../assets/img/teeth.png" type="image/png">
+    <link rel="icon" href="../assets/icon/teeth.ico" type="image/x-icon">
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
