--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking</title>
+    <title>Contact</title>
     <!-- Icon -->
     <link rel="icon" href="../assets/icon/teeth.ico" type="image/x-icon">
     <!-- CSS Stylesheet -->
